# almanac

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  app.py  export_emails.py  fly.toml  hello.py  package-lock.json  package.json  paragraph.py  photo.py  photoblog.db  post.py  pyproject.toml  requirements.txt  routes.py
posts/: first-post.md
static/: gallery.js  script.js
static/css/: index.css  index.css.map  styles.css  styles.css.map
static/js/: collapsible.js  gallery.js  light_dark.js  masonry.js  scrolltop.js  splash.js
static/scss/: _animations.scss  _base.scss  _layout.scss  _markdown.scss  _navigation.scss  _splash.scss  _variables.scss  index.scss  styles.css  styles.css.map  styles.scss
templates/: about.html  base.html  blog.html  blog_index.html  contact.html  edit_post.html  index.html  new_post.html  portfolio.html  post.html  series.html  series_black_white.html  series_japan.html  series_westing.html  splash.html  view_post.html
