[project]
name = "archaeoptyrex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-assets>=2.1.0",
    "ipython>=8.31.0",
    "node>=1.2.2",
    "npm>=0.1.1",
    "pyscss>=1.4.0",
    "ruff>=0.9.2",
    "vite>=1.5.2",
    "werkzeug>=3.1.3",
    "vercel>=0.2.1",
    "next>=1.0.1",
    "livereload>=2.7.1",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
]
